# mdinfo

./: .env.example  .gitignore  .python-version  CLAUDE.md  ideas-01.md  ideas-02.md
backend/: IMPLEMENTATION_SUMMARY.md  article_types.py  collect_data.py  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py  sources.json  test_relevance_filter.py
backend/collector/: pubmed_collector.py  rss_collector.py  scholar_collector.py
backend/processor/: relevance_filter.py  summarizer.py
backend/utils/: __init__.py  cache.py  retry.py
docs/: BACKEND_IMPROVEMENTS.md  FRONTEND_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  NEWS_PAPER_SEPARATION_ANALYSIS.md  backend-analysis.md  collection-performance-optimization.md  google-scholar-collector-plan.md  implementation_plan.md  rss-feed-candidates.md
frontend/: next.config.ts  package-lock.json
frontend/public/: robots.txt
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/src/app/feed.xml/: route.ts
frontend/src/app/news/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/components/: ArticleCard.tsx  ErrorBoundary.tsx  Navigation.tsx  ThemeToggle.tsx
